[feature] load only feature files filtered by file name

--- a/source/TExampleContainer.cls
+++ b/source/TExampleContainer.cls
@@ -20,3 +20,4 @@ Public tags As Collection
 Public background As TBackground
 Public wholeName As String
 Public parent As TFeature
+Public containerType As String
